Update BlueButtonClientTest.java